Mon Nov 10 05:57:53 2014  Tanaka Akira  <akr@fsij.org>

	* test/webrick/webrick.cgi: Don't use debug mode.

	* test/webrick/webrick_long_filename.cgi: Ditto.

Sun Nov  9 23:25:49 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (vm_call_super): allow bound proc method to call super
	  method.

	* vm_insnhelper.c (vm_yield_with_cfunc): push defined class and
	  bound proc method entry to the control frame.

Sun Nov  9 22:46:13 2014  Tanaka Akira  <akr@fsij.org>

	* test/open-uri: Test server log in server thread.

	* test/webrick: Ditto.

Sun Nov  9 22:28:34 2014  Tanaka Akira  <akr@fsij.org>

	* lib/webrick/httpstatus.rb: require webrick/accesslog for AccessLog.

Sun Nov  9 21:03:59 2014  Tanaka Akira  <akr@fsij.org>

	* test/webrick: Fix the argument order of assert_equal.

Sun Nov  9 20:29:01 2014  Tanaka Akira  <akr@fsij.org>

	* test/webrick: Store log in an array.

	* test/net/http: Ditto.

	* test/open-uri: Ditto.

Sun Nov  9 18:35:36 2014  Tanaka Akira  <akr@fsij.org>

	* test/xmlrpc: Refine log test.

Sun Nov  9 18:33:33 2014  Martin Duerst <duerst@it.aoyama.ac.jp>

	* lib/unicode_normalize/normalize.rb: Replaced if-else by
	  case in self.normalized? in parallel to r48309.

Sun Nov  9 18:07:00 2014  Tanaka Akira  <akr@fsij.org>

	* test/xmlrpc: Use assert_join_threads.

Sun Nov  9 14:06:13 2014  Tanaka Akira  <akr@fsij.org>

	* test/xmlrpc: Test webrick error log is empty.

Sun Nov  9 13:47:02 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c (is_incremental_marking): use #if/#else because
	  rb_objspace_t::flags::during_incremental_marking is not defined
	  when GC_ENABLE_INCREMENTAL_MARK is 0.

	* gc.c (will_be_incremental_marking, is_full_marking): similar fix.

Sun Nov  9 12:16:22 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/securerandom.rb (SecureRandom.gen_random): separate
	  implementation details and select at the load time.

Sun Nov  9 12:09:38 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>
